--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@_sh/strapi-plugin-ckeditor": "^2.1.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@retikolo/drag-drop-content-types": "^1.5.2",
-    "@strapi/plugin-cloud": "4.20.0",
-    "@strapi/plugin-i18n": "4.20.0",
-    "@strapi/plugin-users-permissions": "4.20.0",
-    "@strapi/strapi": "4.20.0",
-    "@strapi/typescript-utils": "^4.20.0",
+    "@strapi/plugin-cloud": "4.20.1",
+    "@strapi/plugin-i18n": "4.20.1",
+    "@strapi/plugin-users-permissions": "4.20.1",
+    "@strapi/strapi": "4.20.1",
+    "@strapi/typescript-utils": "^4.20.1",
     "better-sqlite3": "8.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.4",
     "strapi-blurhash": "^1.1.1",
     "strapi-plugin-generate-data": "^1.0.32",
+    "strapi-plugin-populate-deep": "^3.0.1",
     "styled-components": "5.3.3"
   },
   "author": {
