--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ $RECYCLE.BIN/
 ############################
 
 .tmp
+data
 *.log
 *.sql
 *.sqlite
@@ -73,7 +74,7 @@ $RECYCLE.BIN/
 
 
 ############################
-# Misc.
+# Misc. 
 ############################
 
 *#
@@ -113,3 +114,9 @@ exports
 .cache
 build
 dist
+
+############################
+# nginx
+############################
+
+nginx/*.conf
