--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@strapi/strapi": "4.20.1",
     "@strapi/typescript-utils": "^4.20.1",
     "better-sqlite3": "8.6.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.4",
