--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "@_sh/strapi-plugin-ckeditor": "^2.1.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@retikolo/drag-drop-content-types": "^1.5.2",
-    "@strapi/plugin-cloud": "4.20.3",
-    "@strapi/plugin-i18n": "4.20.3",
-    "@strapi/plugin-users-permissions": "4.20.3",
-    "@strapi/strapi": "4.20.3",
-    "@strapi/typescript-utils": "^4.20.3",
+    "@strapi/plugin-cloud": "4.24.0",
+    "@strapi/plugin-i18n": "4.24.0",
+    "@strapi/plugin-users-permissions": "4.24.0",
+    "@strapi/strapi": "4.24.0",
+    "@strapi/typescript-utils": "^4.24.0",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.4",
-    "strapi-blurhash": "^1.1.1",
+    "strapi-blurhash": "^1.2.3",
     "strapi-plugin-generate-data": "^1.0.32",
     "strapi-plugin-populate-deep": "^3.0.1",
     "styled-components": "5.3.3"
+  },
+  "resolutions": {
+    "sharp": "^0.29.0"
   },
   "author": {
     "name": "A Strapi developer"
